--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,16 @@
 * {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(234, 234, 234);
   }
   
-  body {
-    padding: 60px;
+  #root {
+    display: flex;
+    flex-direction:column;
+    align-content: center;
+  }
+
+  form{
+    width: 100%;
   }
   
   input {
@@ -15,7 +21,13 @@
     font-size: 1.2rem;
     outline: none;
     padding: 10px 15px;
+    box-sizing: border-box;
     width: 100%;
+  }
+  
+  h1 {
+    font-size: 3rem;
+    text-align: center;
   }
   
   h2 {
