Now shows 100 GIFs. Previous search is overwritten.

--- a/src/styles.css
+++ b/src/styles.css
@@ -71,5 +71,6 @@ h3 {
   text-align: center;
 }
 .card img {
-  width: 100%;
+  width: 200px;
+  height: 200px;
 }/*# sourceMappingURL=styles.css.map */
