--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,7 +58,7 @@ form {
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
     display: flex;
     flex-direction: column;
-    height: 0%;  
+    height: 0%;
     justify-content: center;
     margin-bottom: 20px;
     margin-right: 20px;
@@ -72,6 +72,7 @@ form {
         text-align: center;
     }
     img {
-        width: 100%;
+        width: 200px;
+        height: 200px;
     }
   }
