--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 * {
-  background-color: #eaeaea;
+  background-color: #eeeeee;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -18,9 +18,9 @@ form {
 form input {
   background-color: white;
   border-radius: 5px;
-  border: 1px solid rgb(97, 32, 158);
+  border: 1px solid #000000;
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   outline: none;
   padding: 10px 15px;
   box-sizing: border-box;
@@ -51,7 +51,7 @@ h3 {
 .card {
   align-content: center;
   align-items: center;
-  background-color: #eaeaea;
+  background-color: #eeeeee;
   border-radius: 10px;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
   display: flex;
@@ -63,7 +63,7 @@ h3 {
   overflow: hidden;
 }
 .card p {
-  background-color: #eaeaea;
+  background-color: #eeeeee;
   flex: 1;
   font-size: 1.5rem;
   margin-top: 5px;
