--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,78 +1,79 @@
-$primary-color: #eaeaea;
+$primary-color: #eeeeee;
+$border-color: #000000;
 
 * {
-    background-color: $primary-color;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: $primary-color;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 #root {
-    display: flex;
-    flex-direction:column;
-    align-content: center;
-    padding-left: 50px;
-    padding-right: 50px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 form {
-    width: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  input {
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid $border-color;
+    color: black;
+    font-size: 1.5rem;
+    outline: none;
+    padding: 10px 15px;
     box-sizing: border-box;
-    input {
-        background-color: white;
-        border-radius: 5px;
-        border: 1px solid rgb(97, 32, 158);
-        color: black;
-        font-size: 1.2rem;
-        outline: none;
-        padding: 10px 15px;
-        box-sizing: border-box;
-        width: 100%;
-      }
+    width: 100%;
   }
+}
 
-  h1 {
-    font-size: 4rem;
+h1 {
+  font-size: 4rem;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 3rem;
+  margin-bottom: 5px;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  align-content: center;
+  align-items: center;
+  background-color: $primary-color;
+  border-radius: 10px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
+  display: flex;
+  flex-direction: column;
+  height: 0%;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  overflow: hidden;
+  p {
+    background-color: $primary-color;
+    flex: 1;
+    font-size: 1.5rem;
+    margin-top: 5px;
+    padding: 5px 20px 0px 20px;
     text-align: center;
   }
-  
-  h2 {
-    font-size: 1.5rem;
+  img {
+    width: 200px;
+    height: 200px;
   }
-  
-  h3 {
-    font-size: 3rem;
-    margin-bottom: 5px;
-  }
-
-  .card-grid {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .card {
-    align-content: center;
-    align-items: center;
-    background-color: $primary-color;
-    border-radius: 10px;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
-    display: flex;
-    flex-direction: column;
-    height: 0%;
-    justify-content: center;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    overflow: hidden;
-    p {
-        background-color: $primary-color;
-        flex: 1;
-        font-size: 1.5rem;
-        margin-top: 5px;
-        padding: 5px 20px 0px 20px;
-        text-align: center;
-    }
-    img {
-        width: 200px;
-        height: 200px;
-    }
-  }
+}
